# MovoInterface

./: CMakeLists.txt  README.md
ROS/movo_robotiq_gripper/: CMakeLists.txt  package.xml
ROS/movo_robotiq_gripper/launch/: robotiq_node.launch
ROS/movo_robotiq_gripper/src/movo_gripper_interface/: robotiq_85_driver.py
ROS/movo_ros/launch/: robotiq_node.launch
ROS/movo_ros/src/movo_gripper_interface/: robotiq_85_gripper.py  robotiq_85_gripper_test.py
cfg/: MovoInterface.cfg
models/MovoEnvironment/: MovoEnvironment.sdf
models/movo/: movo.sdf
models/movo_robotiq/: model.config  movo_robotiq.sdf  movo_robotiq.urdf
models/robotBoundingBoxes/: robotBoundingBoxes.sdf
plugins/heuristicPlugin/: CMakeLists.txt  MovoHeuristicPlugin.cpp
plugins/initialBeliefPlugin/: CMakeLists.txt  MovoInitialBeliefOptions.hpp  MovoInitialBeliefPlugin.cpp
plugins/observationPlugin/: CMakeLists.txt  MovoObservationPlugin.cpp
plugins/rewardPlugin/: CMakeLists.txt  MovoRewardPlugin.cpp
plugins/shared/: MovoUserData.hpp
plugins/shared/MovoRobotInterface/: HardwareStartup.cpp  HardwareStartup.hpp  MotionPlanner.cpp  MovoAPI.cpp  MovoMobileBase.cpp  MovoMobileBase.hpp  MovoRobotInterface.cpp  MovoRobotInterface.hpp  RobotiqInterface.cpp  RobotiqInterface.hpp
plugins/shared/RRTConnect/: RRTConnect.cpp
plugins/terminalPlugin/: CMakeLists.txt  MovoTerminalPlugin.cpp
plugins/transitionPlugins/: CMakeLists.txt  MovoTransitionPlugin.cpp  MovoTransitionPluginOptions.hpp
script/: launchRobotiqGripper.sh
